application/aws/overlay/dev/9-route.yaml
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: route-private
  annotations:
    argocd.argoproj.io/sync-wave: "9"
  labels:
    name: route-private

spec:
  providerConfigRef:
    name: aws-provider  # This line points to your specific ProviderConfig
  forProvider:
    natGatewayIdSelector:
      matchLabels:
        project: sd4841
        environment: dev
        name: natgw
    routeTableIdSelector:
      matchLabels:
        project: sd4841
        environment: dev
        name: routetable-private
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: route-public
  annotations:
    argocd.argoproj.io/sync-wave: "9"
  labels:
    name: route-public
spec:
  providerConfigRef:
    name: aws-provider  # This line points to your specific ProviderConfig
  forProvider:
    gatewayIdSelector:
      matchLabels:
        environment: dev
        project: sd4841
        name: igw
    routeTableIdSelector:
      matchLabels:
        project: sd4841
        environment: dev
        name: routetable-public
